--- a/MSIFanControl/MSIFanControl.entitlements
+++ b/MSIFanControl/MSIFanControl.entitlements
@@ -4,7 +4,9 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
+	<key>com.apple.secury.application-groups</key>
+	<array>
+		<string>{REVERSED.COMPANY.DOMAIN}</string>
+	<array>
 </dict>
 </plist>
